field-forms/objects/Form_Setting__mdt/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <label>Display Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>