field-forms/objects/Form_Setting__mdt/fields/Structure__c.field-meta.xml
<CustomField>
    <fullName>Structure__c</fullName>
    <label>Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Component</fullName>
                <default>true</default>
                <label>Component</label>
            </value>
            <value>
                <fullName>Layout</fullName>
            </value>
            <value>
                <fullName>Page</fullName>
            </value>
            <value>
                <fullName>Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>